# market_sim

./: .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README_VISION.md  ROADMAP_STATUS.md  USAGE_GUIDE.md  dune-project  market_sim.opam
.claude/: settings.local.json
examples/: dune  simple_simulation.ml
frontend/: next.config.js  package-lock.json  package.json
frontend/.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: AlertsManager.tsx  BacktestResults.tsx  IndicatorManager.tsx  TradingChart.tsx
frontend/components/blocks/: hero.tsx
frontend/types/: api.ts
lib/: dune
lib/core/: dune  orderBook.ml  orderBook.mli  types.ml
lib/risk/: dune  riskManager.ml  riskManager.mli
lib/simulation/: agent.ml  agent.mli  dune  eventEngine.ml  eventEngine.mli
lib/strategies/: dune  marketMaker.ml  marketMaker.mli
server/: api_routes.py  brokerage_ui.html  db.ml  dune  market_data_cache.py  openbb_data_service.py  paper_trading_engine.py  schemas.py  server.ml  stock_data.py
server/quant_engine/: __init__.py  earnings_drift.py  multi_factor_scorer.py  ou_mean_reversion.py  pairs_trading.py  quality.py  quality_strategy.py  quant_framework.py  residual_momentum.py  residual_momentum_enhanced.py  ts_momentum.py  value.py  value_strategy.py
test/: dune  test_market_sim.ml
(+312 files in other folders)
